# covid-2020-elections

./: README.md  pyproject.toml
covid_2020_elections/: cnn_downloader.py  covid_data.py  helpers.py  main.py
data/: 2020-county-races-PG-AK.json  2020-county-races-PG-AL.json  2020-county-races-PG-AR.json  2020-county-races-PG-AZ.json  2020-county-races-PG-CA.json  2020-county-races-PG-CO.json  2020-county-races-PG-CT.json  2020-county-races-PG-DC.json  2020-county-races-PG-DE.json  2020-county-races-PG-FL.json  2020-county-races-PG-GA.json  2020-county-races-PG-HI.json  2020-county-races-PG-IA.json  2020-county-races-PG-ID.json  2020-county-races-PG-IL.json  2020-county-races-PG-IN.json  2020-county-races-PG-KS.json  2020-county-races-PG-KY.json  2020-county-races-PG-LA.json  2020-county-races-PG-MA.json  2020-county-races-PG-MD.json  2020-county-races-PG-ME.json  2020-county-races-PG-MI.json  2020-county-races-PG-MN.json  2020-county-races-PG-MO.json  2020-county-races-PG-MS.json  2020-county-races-PG-MT.json  2020-county-races-PG-NC.json  2020-county-races-PG-ND.json  2020-county-races-PG-NE.json  2020-county-races-PG-NH.json  2020-county-races-PG-NJ.json  2020-county-races-PG-NM.json  2020-county-races-PG-NV.json  2020-county-races-PG-NY.json  2020-county-races-PG-OH.json  2020-county-races-PG-OK.json  2020-county-races-PG-OR.json  2020-county-races-PG-PA.json  2020-county-races-PG-RI.json  (+97 more)
tests/: test_covid_2020_elections.py
